--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="button_text">Tell Joke</string>
     <string name="action_settings">Settings</string>
     <string name="sample_joke">Why did the chicken cross the road? To get to the other side.</string>
+
+    <!-- google cloud android emulator root URL -->
+    <string name="google_cloud_root_url">http://10.0.2.2:8080/_ah/api/</string>
 </resources>
